{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 18,
  "lineage": "4eb89933-af3c-a1d9-289a-3d257f43213c",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "demo-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e282d5bceba57cc7",
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:elastic-ip/eipalloc-0e282d5bceba57cc7",
            "association_id": "eipassoc-08399165f1a77fb5a",
            "domain": "vpc",
            "id": "eipalloc-0e282d5bceba57cc7",
            "instance": "i-0daad25f4380c6add",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0d305a2e0db3d27a1",
            "private_dns": "ip-172-31-21-248.ap-southeast-1.compute.internal",
            "private_ip": "172.31.21.248",
            "public_dns": "ec2-54-151-191-39.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.151.191.39",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.compute.aws_instance.demo-instance",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e4b5d31e60aa0acd",
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:instance/i-0daad25f4380c6add",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0daad25f4380c6add",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "duongcon-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d305a2e0db3d27a1"
              }
            ],
            "primary_network_interface_id": "eni-0d305a2e0db3d27a1",
            "private_dns": "ip-172-31-21-248.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.21.248",
            "public_dns": "ec2-18-136-203-112.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.136.203.112",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05453eb0223342de3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "public_security_group"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07931677fa9e487e7",
            "tags": {
              "Name": "DuongCon Demo Terraform EC2 Instance"
            },
            "tags_all": {
              "Name": "DuongCon Demo Terraform EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d52ddab2880fd01a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "i-0daad25f4380c6add",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:security-group/sg-05b9684219bd4c332",
            "description": "private_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b9684219bd4c332",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d52ddab2880fd01a"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d52ddab2880fd01a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_security_group",
            "name_prefix": "",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a147a2a1bf9a7252"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "sg-05b9684219bd4c332",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:security-group/sg-0d52ddab2880fd01a",
            "description": "public_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d52ddab2880fd01a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a147a2a1bf9a7252"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "sg-0d52ddab2880fd01a",
            "region": "ap-southeast-1"
          }
        }
      ]
    }
  ]
}